fix responsive heading on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,52 +43,82 @@ p .paragraphe {
 
 h1 {
 
-font-family: "Space Mono";
-font-size: 56px;
-font-weight: 700;
-line-height: 56px;
-letter-spacing: -2.5px;
-}
-
-h2 {
-  font-family: "Space Mono";
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 48px;
-  letter-spacing: -2.14px;
-}
-
-h3 {
-
   font-family: "Space Mono";
   font-size: 40px;
   font-weight: 700;
-  line-height: 48px;
+  line-height: 40px;
   letter-spacing: -1.79px;
-}
-
-h4 {
-  font-family: "Space Mono";
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: -1.07px;
-}
-
-button {
-	width: fit-content;
-	background-color: #FCB72B;
-	color: #fff;
-	padding: 14px 39px;
-	border: none;
-	border: #FCB72B solid 1px;
-	font-size: 0.938em;
-	cursor: pointer;
-
-	&:hover {
-		background-color: #fff;
-		color: #FCB72B;
-		border: #FCB72B solid 1px;
-		transition: color 0.3s ease;
-	}
-}
+  }
+  
+  h2 {
+    font-family: "Space Mono";
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -1.43px;
+  }
+  
+  h3 {
+  
+    font-family: "Space Mono";
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -1.07px;
+  }
+  
+  h4 {
+    font-family: "Space Mono";
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: -0.8px;
+  }
+  
+  button {
+      width: fit-content;
+      background-color: #FCB72B;
+      color: #fff;
+      padding: 14px 39px;
+      border: none;
+      border: #FCB72B solid 1px;
+      font-size: 0.938em;
+      cursor: pointer;
+  
+      &:hover {
+          background-color: #fff;
+          color: #FCB72B;
+          border: #FCB72B solid 1px;
+          transition: color 0.3s ease;
+      }
+  }
+  
+  @media (min-width: 768px) {
+      h1 {
+          font-size: 56px;
+          font-weight: 700;
+          line-height: 56px;
+          letter-spacing: -2.5px;
+      }
+  
+      h2 {
+          font-size: 48px;
+          font-weight: 700;
+          line-height: 48px;
+          letter-spacing: -2.14px;
+      }
+  
+      h3 {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 48px;
+          letter-spacing: -1.79px;
+      }
+  
+      h4 {
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 28px;
+          letter-spacing: -1.07px;
+      }
+  }
